--- a/index2.html
+++ b/index2.html
@@ -194,7 +194,8 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
-    </br>
+</br>
+<iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fm.facebook.com%2Fstory.php%3Fstory_fbid%3D380272975717590%26id%3D100012046712660&width=500&show_text=true&height=441&appId" width="500" height="441" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
     <br/>
     <nav class="navbar fixed-bottom navbar-light bg-light" >
  <a class="navbar-brand" href="index2.html" style="text-align:center; background-color: #e3f2fd; width:100%;color:red;"><h3>Thank you for visiting my website</h3></a>
